<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="6dp"
    android:id="@+id/linearLayout3">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:id="@+id/tableLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Test"
            android:id="@+id/tvTest"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTTest"
            android:editable="false"
            android:autoText="false"
            android:hint="@string/Test"
            android:layout_gravity="bottom"
            android:inputType="textCapSentences" />
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/tR0" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lLDateHour">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/lLDate">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date"
                    android:id="@+id/tvDate"
                    android:textSize="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eTDate"
                    android:hint="@string/Date"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/lLHour"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hour"
                    android:id="@+id/tvHour"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eTHour"
                    android:hint="@string/Hour"
                    android:inputType="text"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Salon"
            android:id="@+id/tvSalon"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTSalon"
            android:editable="false"
            android:autoText="false"
            android:hint="@string/Salon"
            android:layout_gravity="bottom"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Percent"
            android:id="@+id/tvPercent"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTPercent"
            android:editable="false"
            android:autoText="false"
            android:hint="@string/PercentSimbol"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:id="@+id/tvDescription"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/eTDescription"
            android:editable="false"
            android:autoText="false"
            android:hint="@string/Description"
            android:textIsSelectable="true"
            android:inputType="textMultiLine"
            android:layout_marginTop="5dp" />


    </TableLayout>
</LinearLayout>
