<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
android:padding="5dp">
tools:context="com.maxxindev.studia.Controller.Professor.ProfessorFragment">

<!-- TODO: Update blank fragment layout -->

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLNoProfessor"
        android:background="@android:color/background_light"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoProfessor"
            android:id="@+id/tvNoProfessor"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="16dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:focusableInTouchMode="false"
            android:id="@+id/vSeparator2"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Professor_twoPoints"
            android:id="@+id/tvProfessorName"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProfessorNamed"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Professor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email_twoPoints"
            android:id="@+id/tvProfessorEmail"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProfessorEmailed"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Professor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Office_twoPoints"
            android:id="@+id/tvProfessorOffice"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProfessorOfficed"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Professor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number_twoPoints"
            android:id="@+id/tvProfessorNumber"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProfessorNumbered"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Professor" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLSchedule"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Schedule_twoPoints"
            android:id="@+id/tvProfessorSchedule"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:singleLine="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLMonday"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monday"
            android:id="@+id/tvMonday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMondayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLTuesday"
        android:focusableInTouchMode="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday"
            android:id="@+id/tvTuesday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTuesdayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLWednesday"
        android:focusableInTouchMode="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:id="@+id/tvWednesday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWednesdayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLThursday"
        android:focusableInTouchMode="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday"
            android:id="@+id/tvThursday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvThursdayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLFriday"
        android:focusableInTouchMode="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:id="@+id/tvFriday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFridayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLSaturday"
        android:focusableInTouchMode="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday"
            android:id="@+id/tvSaturday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSaturdayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLSunday"
        android:focusableInTouchMode="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday"
            android:id="@+id/tvSunday"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSundayHour"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic"
            android:singleLine="false" />
    </LinearLayout>

</LinearLayout>
</FrameLayout>
